--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -16,7 +16,7 @@
         </a>
         <div class="home">
             <a th:href="@{/}">HOME | </a>
-            <a href="#">로그아웃 | </a>
+            <a th:href="@{/member/logout}">로그아웃 | </a>
             <a href="#">고객센터</a> 
         </div>
     </header>
