Fix : 발표전 수정

--- a/src/main/resources/templates/cs/faq/list.html
+++ b/src/main/resources/templates/cs/faq/list.html
@@ -30,8 +30,8 @@
           <div class="faq-item">
             <!-- FAQ 질문 -->
             <a th:href="@{/cs/layout/faq/view/{id}(id=${faq.id})}" class="question" th:text="'Q. ' + ${faq.title}">Q. 질문 내용</a>
-            <!-- FAQ 답변 -->
-            <span class="answer" th:text="${faq.content}">A. 답변 내용</span>
+<!--            &lt;!&ndash; FAQ 답변 &ndash;&gt;-->
+<!--            <span class="answer" th:text="${faq.content}">A. 답변 내용</span>-->
           </div>
         </div>
 
