--- a/src/main/resources/templates/cs/notice/view.html
+++ b/src/main/resources/templates/cs/notice/view.html
@@ -17,7 +17,7 @@
     </aside>
     <article class="no_article_view">
       <nav>
-        <h1 th:text="${notice.type1}">전체</h1> <!-- 공지사항 유형 반영 -->
+        <h1>전체</h1> <!-- 공지사항 유형 반영 -->
         <h2>공지사항 전체 내용입니다.</h2>
       </nav>
       <nav>
