--- a/src/main/resources/templates/admin/config/policy.html
+++ b/src/main/resources/templates/admin/config/policy.html
@@ -111,7 +111,7 @@
 
             <!-- 금융 약관 -->
             <section>
-                <h2 class="adminp">금융 약관</h2>
+                <h2 class="adminp">전자금융거래 약관</h2>
                 <p>회원가입 및 정책 페이지에 노출되는 금융 약관입니다.</p>
                 <article>
                     <table class="adminwidthtable">
