Fix : Article 주석처리

--- a/src/main/resources/templates/cs/faq/list.html
+++ b/src/main/resources/templates/cs/faq/list.html
@@ -1,11 +1,14 @@
 <div class="faq" th:fragment="list">
 
-  /*
-  날짜 : 2024/10/25
-  이름 : 김소희
-  내용 : cs 동적처리
-  */
-  
+<!--
+  날짜 : 2024/10/18
+  이름 : 최준혁
+  내용 : 고객센터 자주묻는질문 목록
+
+  수정이력
+  - 2024/10/24 김소희 - 동적처리
+-->
+
   <nav>
     <div>
       <p>홈<span>></span>자주묻는질문</p>
