--- a/src/main/resources/templates/cs/faq/view.html
+++ b/src/main/resources/templates/cs/faq/view.html
@@ -1,10 +1,13 @@
 <div class="faq" th:fragment="view">
-    
-  /*
-  날짜 : 2024/10/25
-  이름 : 김소희
-  내용 : cs 동적처리 (미완성)
-  */
+
+  <!--
+    날짜 : 2024/10/18
+    이름 : 최준혁
+    내용 : 고객센터 자주묻는질문 글보기
+
+    수정이력
+    - 2024/10/25 김소희 - 동적처리
+  -->
   
   <nav>
     <div>
