--- a/src/main/resources/templates/cs/index.html
+++ b/src/main/resources/templates/cs/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+  날짜 : 2024/10/18
+  이름 : 최준혁
+  내용 : 고객센터 목록 index
+
+  수정이력
+  - 2024/10/25 김소희 - 동적처리
+-->
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
