--- a/src/main/resources/templates/cs/layout/cs_layout.html
+++ b/src/main/resources/templates/cs/layout/cs_layout.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<!--
+  날짜 : 2024/10/18
+  이름 : 최준혁
+  내용 : 고객센터 레이아웃
+
+  수정이력
+  - 2024/10/25 김소희 - 연결 변경
+-->
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
