--- a/src/main/resources/templates/cs/notice/list.html
+++ b/src/main/resources/templates/cs/notice/list.html
@@ -1,11 +1,14 @@
 <div class="notice" th:fragment="list">
 
-  /*
-  날짜 : 2024/10/25
-  이름 : 김소희
-  내용 : cs 동적처리
-  */
-  
+  <!--
+    날짜 : 2024/10/18
+    이름 : 최준혁
+    내용 : 고객센터 공지사항 목록
+
+    수정이력
+    - 2024/10/25 김소희 - 동적처리
+  -->
+
   <nav>
     <div>
       <p>홈<span>></span>공지사항</p>
