--- a/src/main/resources/templates/cs/qna/write.html
+++ b/src/main/resources/templates/cs/qna/write.html
@@ -1,4 +1,14 @@
 <div class="qna" th:fragment="write">
+
+  <!--
+    날짜 : 2024/10/18
+    이름 : 최준혁
+    내용 : 고객센터 문의하기 글쓰기
+
+    수정이력
+    - 2024/10/25 김소희 - 동적처리
+-->
+
   <nav>
     <div>
       <p>홈<span>></span>문의하기</p>
