--- a/src/main/resources/templates/cs/qna/list.html
+++ b/src/main/resources/templates/cs/qna/list.html
@@ -1,10 +1,13 @@
 <div class="qna" th:fragment="list">
 
-  /*
-  날짜 : 2024/10/25
-  이름 : 김소희
-  내용 : cs 동적처리
-  */
+  <!--
+    날짜 : 2024/10/18
+    이름 : 최준혁
+    내용 : 고객센터 문의하기 목록
+
+    수정이력
+    - 2024/10/25 김소희 - 동적처리
+  -->
   
   <nav>
     <div>
