--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -1,3 +1,7 @@
+<!--날짜 : 2024/10/25-->
+<!--이름 : 강유정(최초 작성자)-->
+<!--내용 : 이용약관 html 생성-->
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <html lang="ko">
