--- a/src/main/resources/static/css/my/modal.css
+++ b/src/main/resources/static/css/my/modal.css
@@ -132,6 +132,11 @@
     font-size: 24px;
 }
 
+.gendermodal{
+    width: 50px;
+    margin-right: 10px;
+}
+
 .modal-nav button {
     background-color: transparent;
     border: none;
@@ -276,7 +281,7 @@
     margin-top: 5px;
     width: 98%;
     resize: none;
-    height: 210px;
+    height: 150px;
     border: 0.4px solid #34495e; /* 테두리 색상 */
     border-radius: 5px; /* 둥근 모서리로 부드러운 느낌 */
 }
@@ -287,6 +292,20 @@
     height: 105px;
     border: none; /* 테두리 색상 */
     border-radius: 5px; /* 둥근 모서리로 부드러운 느낌 */
+}
+
+.mbbtn {
+    margin-left: 90%;
+    width: 65px;
+    height: 30px;
+    margin-top: 5px;
+}
+
+.postbtn {
+    margin-left: 10px;
+    width: 40px;
+    height: 30px;
+
 }
 
 .sellermodal-content p,
