--- a/src/main/resources/templates/admin/include/admin_modal.html
+++ b/src/main/resources/templates/admin/include/admin_modal.html
@@ -388,27 +388,27 @@
                         <tr>
                             <th>우편번호</th>
                             <td>
-                                <input type="text" name="postalCode" />
-                                <button class="postbtn" type="button" onclick="searchPostalCode()">검색</button>
+                                <input type="text" name="zip" />
+                                <button class="postbtn" type="button" onclick="zip()">검색</button>
                             </td>
                         </tr>
 
                         <!-- 기본주소 -->
                         <tr>
                             <th>기본주소</th>
-                            <td><input type="text" name="address1" /></td>
+                            <td><input type="text" name="addr1" /></td>
                         </tr>
 
                         <!-- 상세주소 -->
                         <tr>
                             <th>상세주소</th>
-                            <td><input type="text" name="address2" /></td>
+                            <td><input type="text" name="addr2" /></td>
                         </tr>
 
                         <!-- 가입일 (수정 불가) -->
                         <tr>
                             <th>가입일</th>
-                            <td><input type="text" name="registrationDate" readonly /></td>
+                            <td><input type="text" name="createdAt" readonly /></td>
                         </tr>
 
                         <!-- 최근 로그인 날짜 (수정 불가) -->
@@ -420,7 +420,7 @@
                         <!-- 기타 -->
                         <tr>
                             <th>기타</th>
-                            <td><textarea name="notes" placeholder="회원에 대한 기타 정보 입력"></textarea></td>
+                            <td><textarea name="etc" placeholder="회원에 대한 기타 정보 입력"></textarea></td>
                         </tr>
                     </table>
 
